Fix modal overflow on config (#413)

--- a/assets/styles/components/_modal.scss
+++ b/assets/styles/components/_modal.scss
@@ -1,5 +1,6 @@
 .tf-modal {
   background-color: rgba(black, 0.5);
+  display: flex;
   height: 100%;
   left: 0;
   padding: 3.2rem;
@@ -7,6 +8,10 @@
   top: 0;
   width: 100%;
   z-index: var(--z-modal);
+
+  &.hidden {
+    display: none;
+  }
 
   &__close {
     color: var(--c-black-20);
